--- a/package.json
+++ b/package.json
@@ -32,5 +32,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "uuid": "^8.3.2"
   }
 }
